[project]
name = "background-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.62",
    "fastapi>=0.120.2",
    "rembg>=2.0.67",
    "onnxruntime>=1.18.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
]
